# AEGIS-Lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
aegis-cli/: pyproject.toml
aegis-cli/src/: main.rs
aegis-core/src/: lib.rs  manifold.rs  memory.rs  topology.rs
aegis-core/src/ml/: convergence.rs  convolution.rs  linalg.rs  mod.rs  neural.rs
aegis-kernel/src/: interrupts.rs  lib.rs  loader.rs  main.rs  scheduler.rs
aegis-lang/: Cargo.toml
aegis-lang/src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  vm.rs
aether-core/src/: manifold.rs  memory.rs
aether-core/src/ml/: autograd.rs  tensor.rs
aether-lang/: Cargo.toml
aether-lang/src/: interpreter.rs  lib.rs  parser.rs  vm.rs
benchmarks/: Cargo.toml
crates/aether-core/src/: manifold.rs  memory.rs
crates/aether-kernel/src/boot/: bios.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CORE_REFACTOR_PRD.md  EXAMPLES.md  TUTORIAL.md
src/: benchmarks.rs  lib.rs
src/benchmarks/: aether_bench.rs  manifold_bench.rs  ml_bench.rs  runner.rs
