[package]
name = "aegis-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Rigorous benchmarks for AEGIS microkernel components"

[dependencies]
# Use aegis-shield as dependency, but only the portable parts
libm = "0.2"
heapless = "0.8"

[dependencies.nalgebra]
version = "0.32"
default-features = false
features = ["libm"]

[[test]]
name = "full_benchmark_suite"
path = "tests/full_suite.rs"
